all the frontend etches and stuff and main page edits

--- a/_data/csse.yml
+++ b/_data/csse.yml
@@ -69,6 +69,6 @@ Sprint5:
   end: 20
 Sprint6:
   title: Create a Final Project and N@tM 
-  description: Trimester 2 concludes with student presenting their CPT project at N@tM.  Each person within "Student Teams" will have their own specialty within the student project that satisfied all their Create Performance Task requirements.   Student should be able to talk about design, coding, and present features of their portion of the system.
+  description: Trimester 2 concludes with student presenting their Binary project at N@tM.  Each person within "Student Teams" will have their own specialty within the student project that satisfied all their Create Performance Task requirements.   Student should be able to talk about design, coding, and present features of their portion of the system.
   start: 21
   end: 24
