--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Nighthawk-Pages
+title: BinaryCiphering
 description: "August 2023 to June 2024"
 owner_name: Tirth Thakkar
 github_username: Tirth-Thakkar
 github_repo: "Nighthawk-Pages"
-baseurl: "/Nighthawk-Pages"
+baseurl: "/Binary"
 remote_theme: jekyll/minima
 minima:
   social_links:
