--- a/_data/csp.yml
+++ b/_data/csp.yml
@@ -98,12 +98,12 @@ Sprint4:
   end: 16
 Sprint5:
   title: OOP and Databases
-  description: Trimester 2 continues with student learning OOP and immediately applying it to Databases.  Each week a "Student Teams" will be working on frontend and backend elements for their Create Performance Task (CPT).  GitHub pages will be focus of instruction for frontend, OOP in Python will be instruction provided to create a database which will help exceed every CPT requirement.
+  description: Trimester 2 continues with student learning OOP and immediately applying it to Databases.  Each week a "Student Teams" will be working on frontend and backend elements for their Create Performance Task (Binary).  GitHub pages will be focus of instruction for frontend, OOP in Python will be instruction provided to create a database which will help exceed every Binary requirement.
   start: 17
   end: 20
 Sprint6:
-  title: Create Performance Task (CPT) and N@tM 
-  description: Trimester 2 concludes with student presenting their CPT project at N@tM.  Each person within "Student Teams" will have their own specialty within the student project that satisfied all their Create Performance Task requirements.   Student should be able to talk about design, coding, and present features of their portion of the system.
+  title: Create Performance Task (Binary) and N@tM 
+  description: Trimester 2 concludes with student presenting their Binary project at N@tM.  Each person within "Student Teams" will have their own specialty within the student project that satisfied all their Create Performance Task requirements.   Student should be able to talk about design, coding, and present features of their portion of the system.
   start: 21
   end: 24
 Sprint7: 
